ndb - bug#51374 - check for INCOMPATIBLE_VERSION as return code of dropIndex